{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 39,
  "lineage": "3ae608f5-44b2-f6fa-9292-5fb9e7a517d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bdd7ef69402955b",
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:elastic-ip/eipalloc-07bdd7ef69402955b",
            "association_id": "eipassoc-0d40a16fb73d6eb2c",
            "domain": "vpc",
            "id": "eipalloc-07bdd7ef69402955b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-06e39f6d6fec9d093",
            "private_dns": "ip-10-0-1-180.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-3-35-180-0.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.180.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-5-nat-eip"
            },
            "tags_all": {
              "Name": "my-eks-5-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086a43496cb46286c",
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:instance/i-0c419f508c1f46528",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c419f508c1f46528",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-eks-5-key-5",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ae5551168e58af7",
            "private_dns": "ip-10-0-1-247.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.247",
            "public_dns": "ec2-43-201-35-115.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.35.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:916491575739:key/a5f76d96-0db7-4a4f-b7ae-af7ae3ed218d",
                "tags": {
                  "Name": "my-eks-5-bastion-ebs-5"
                },
                "tags_all": {
                  "Name": "my-eks-5-bastion-ebs-5"
                },
                "throughput": 125,
                "volume_id": "vol-0ab54e72baed04177",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007a85d1e95026eab",
            "tags": {
              "Name": "my-eks-5-bastion-host-5"
            },
            "tags_all": {
              "Name": "my-eks-5-bastion-host-5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d1f5cd906fcf556"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_24_04",
            "data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086a43496cb46286c",
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:instance/i-04e4fbf091412b38a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e4fbf091412b38a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-eks-5-key-5",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07bfbf885b48812b5",
            "private_dns": "ip-10-0-11-54.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:916491575739:key/a5f76d96-0db7-4a4f-b7ae-af7ae3ed218d",
                "tags": {
                  "Name": "my-eks-5-private-ec2-ebs-5"
                },
                "tags_all": {
                  "Name": "my-eks-5-private-ec2-ebs-5"
                },
                "throughput": 125,
                "volume_id": "vol-09db7b0e663e031ba",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a855a0963eb5876d",
            "tags": {
              "Name": "my-eks-5-private-ec2-5"
            },
            "tags_all": {
              "Name": "my-eks-5-private-ec2-5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0058c7157e2f321f8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.bastion",
            "aws_security_group.private_ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_24_04",
            "data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:internet-gateway/igw-0e68ba4ebfa84b117",
            "id": "igw-0e68ba4ebfa84b117",
            "owner_id": "916491575739",
            "tags": {
              "Names": "my-eks-5-igw"
            },
            "tags_all": {
              "Names": "my-eks-5-igw"
            },
            "vpc_id": "vpc-023194704e7569d69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bdd7ef69402955b",
            "association_id": "eipassoc-0d40a16fb73d6eb2c",
            "connectivity_type": "public",
            "id": "nat-04c4ce04b1984693a",
            "network_interface_id": "eni-06e39f6d6fec9d093",
            "private_ip": "10.0.1.180",
            "public_ip": "3.35.180.0",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-007a85d1e95026eab",
            "tags": {
              "Name": "my-eks-5-nat-gw"
            },
            "tags_all": {
              "Name": "my-eks-5-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:route-table/rtb-006e99f7b828ce333",
            "id": "rtb-006e99f7b828ce333",
            "owner_id": "916491575739",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04c4ce04b1984693a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-5-private-rt"
            },
            "tags_all": {
              "Name": "my-eks-5-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-023194704e7569d69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:route-table/rtb-065472aec949dd753",
            "id": "rtb-065472aec949dd753",
            "owner_id": "916491575739",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e68ba4ebfa84b117",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-5-public-rt"
            },
            "tags_all": {
              "Name": "my-eks-5-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-023194704e7569d69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5b3f89ffa6d059b",
            "route_table_id": "rtb-006e99f7b828ce333",
            "subnet_id": "subnet-0a855a0963eb5876d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b2aacbbce4f1e1a",
            "route_table_id": "rtb-006e99f7b828ce333",
            "subnet_id": "subnet-079467ab7a480a790"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bc44d2717f29682",
            "route_table_id": "rtb-065472aec949dd753",
            "subnet_id": "subnet-007a85d1e95026eab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce295408b7093fd9",
            "route_table_id": "rtb-065472aec949dd753",
            "subnet_id": "subnet-0573561b38fa1c21d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:security-group/sg-02d1f5cd906fcf556",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d1f5cd906fcf556",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from authorized ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-eks-5-bastion-sg-5",
            "name_prefix": "",
            "owner_id": "916491575739",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-5-bastion-sg"
            },
            "tags_all": {
              "Name": "my-eks-5-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023194704e7569d69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:security-group/sg-0058c7157e2f321f8",
            "description": "Allow from Bastion SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0058c7157e2f321f8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d1f5cd906fcf556"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-eks-5-private-ec2-sg",
            "name_prefix": "",
            "owner_id": "916491575739",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-5-private_ec2"
            },
            "tags_all": {
              "Name": "my-eks-5-private_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-023194704e7569d69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:subnet/subnet-0a855a0963eb5876d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a855a0963eb5876d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916491575739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kubernetes.io/role/internal-elb": "1",
              "Name": "my-eks-5-private-subnet-ap-northeast-2a"
            },
            "tags_all": {
              "Kubernetes.io/role/internal-elb": "1",
              "Name": "my-eks-5-private-subnet-ap-northeast-2a"
            },
            "vpc_id": "vpc-023194704e7569d69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:subnet/subnet-079467ab7a480a790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079467ab7a480a790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916491575739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kubernetes.io/role/internal-elb": "1",
              "Name": "my-eks-5-private-subnet-ap-northeast-2b"
            },
            "tags_all": {
              "Kubernetes.io/role/internal-elb": "1",
              "Name": "my-eks-5-private-subnet-ap-northeast-2b"
            },
            "vpc_id": "vpc-023194704e7569d69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:subnet/subnet-007a85d1e95026eab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007a85d1e95026eab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916491575739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kubernetes.io/role/elb": "1",
              "Name": "my-eks-5-public-subnet-ap-northeast-2a"
            },
            "tags_all": {
              "Kubernetes.io/role/elb": "1",
              "Name": "my-eks-5-public-subnet-ap-northeast-2a"
            },
            "vpc_id": "vpc-023194704e7569d69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:subnet/subnet-0573561b38fa1c21d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0573561b38fa1c21d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916491575739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kubernetes.io/role/elb": "1",
              "Name": "my-eks-5-public-subnet-ap-northeast-2b"
            },
            "tags_all": {
              "Kubernetes.io/role/elb": "1",
              "Name": "my-eks-5-public-subnet-ap-northeast-2b"
            },
            "vpc_id": "vpc-023194704e7569d69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:916491575739:vpc/vpc-023194704e7569d69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fa487dae55b6cc3",
            "default_route_table_id": "rtb-0e7f032dba1ce74af",
            "default_security_group_id": "sg-05d002605362edd61",
            "dhcp_options_id": "dopt-046bcd965a406daa4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023194704e7569d69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7f032dba1ce74af",
            "owner_id": "916491575739",
            "tags": {
              "Names": "my-eks-5-vpc"
            },
            "tags_all": {
              "Names": "my-eks-5-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}